Add basic UV information on click
